[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Suraj <lutades55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.24.0"
numpy = "^1.25.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
datetime = "^5.1"
python-levenshtein = "^0.21.1"
pillow = "^10.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
